# Whisp

./: .gitignore  index.html  package-lock.json  package.json  run-linux.sh
.github/workflows/: release.yml
go-android/: go.mod  go.sum  singbox.go  tools_goclient.go
go-android/cmd/patch/: main.go
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/android-patch/: apply.sh  singbox.gradle
src-tauri/android-patch/java/com/whispera/whisp/: BootReceiver.kt  MainActivity.kt  WhispVpnNative.kt  WhispVpnPrep.kt  WhispVpnService.kt
src-tauri/android-patch/manifest/: manifest-additions.xml
src-tauri/android-patch/res/xml/: network_security_config.xml
src-tauri/capabilities/: android.json  migrated.json
src-tauri/crates/whisp-vpn-android/src/: go_client_runner.rs  lib.rs  mihomo_runner.rs  service_intent.rs
src-tauri/src/: go_client.rs  lib.rs  mihomo.rs
