[package]
name = "whisp"
version = "0.1.5"
description = "Whisp Desktop Client"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "whisp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
sha2 = "0.10"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "socks"], default-features = false }
base64 = "0.22"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
sha2 = "0.10"

[target.'cfg(not(target_os = "android"))'.dependencies]
keyring = "3"

[target.'cfg(target_os = "android")'.dependencies]
# Нативный VPN-ядро для Android (чистый Rust rules engine + JNI-мост).
# На desktop не подключается: там роутинг делает mihomo sidecar.
whisp-vpn-android = { path = "crates/whisp-vpn-android", features = ["jni-bindings"] }
tauri-plugin-barcode-scanner = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[workspace]
members = ["crates/whisp-vpn-android"]
